--- a/web/index.html
+++ b/web/index.html
@@ -64,7 +64,7 @@
   <div id="sydWelcomeTemplate">
     <div id="b_sydWelcomeTemplate" class="b_wlcmCont" data-priority="2" style="margin-top: 66px;">
       <div class="b_wlcmHdr"><div class="b_wlcmLogo"></div>
-      <div class="b_wlcmDesc">Niansuh AI Web Copilot</div>
+      <div class="b_wlcmDesc">Bing is your AI-powered copilot for the web</div>
     </div>
     <div class="b_wlcmTileCont b_wlcmTileContConsumer"></div>
   </div>
